tests/custom-sysy2022/positive/c072_lib_timer.sy
int main() {
  int x = 1;
  starttime();
  x = x + 6;
  stoptime();
  putint(x);
  putch(10);
  return 0;
}
