tests/custom-sysy2022/negative/c114_neg_sem_08.sy
void f() {}
int main() {
  int x = f();
  return x;
}
